fixing-align

--- a/aboutme.css
+++ b/aboutme.css
@@ -1,6 +1,6 @@
 .AboutMe {
     position: fixed;
-    left: 45.5%;
+    left: 46rem;
     /* font-family: 'New Tegomin', serif; */
     font-family:'Helvetica Neue', sans-serif;
     margin-top: 1.2rem;
